code review 修正依頼#3

--- a/.gitignore
+++ b/.gitignore
@@ -27,7 +27,9 @@
 /public/assets
 .byebug_history
 
-public/uploads/
+.DS_Store public/uploads
+
+.DS_Store
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
