code review　修正依頼　＃４

--- a/.gitignore
+++ b/.gitignore
@@ -27,9 +27,13 @@
 /public/assets
 .byebug_history
 
-.DS_Store public/uploads
+/pubic/.DS_Store
+
+/app/.DS_Store
 
 .DS_Store
+
+
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
